--- a/scss/restaurant.scss
+++ b/scss/restaurant.scss
@@ -159,6 +159,7 @@ $darkgrey: #353535;
         display: flex;
         flex-direction: row;
         align-items: end;
+        overflow: hidden;
         & i {
             display: flex;
             align-items: center;
